<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/shareQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignEnd="@id/question"
        app:srcCompat="@drawable/ic_share"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionNum"
        android:text="@string/number_of_questions"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
         />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:text="@string/question"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:orientation="vertical"
        >

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer1Btn"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/answer_1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer2Btn"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/answer_2"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer3Btn"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/answer_3"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer4Btn"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/answer_4"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/black"
            />

    </LinearLayout>







</LinearLayout>